# PokeLib

./: .clang-format  CMakeLists.txt  README
include/: CMakeLists.txt
include/pokelib/: Box.h  CMakeLists.txt  PRNG.h  Party.h  PokeText.h  Pokedex.h  Pokemon.h  Save.h  Toolkit.h  Trainer.h  config.h  data_tables.h  pokelib.h
lib/: Box.cpp  CMakeLists.txt  PRNG.cpp  Party.cpp  PokeText.cpp  Pokedex.cpp  Pokemon.cpp  Save.cpp  Toolkit.cpp  Trainer.cpp  internal.h
src/: Box.cpp  Party.cpp  PokeText.cpp  Pokedex.cpp  Save.cpp  Toolkit.cpp  Trainer.cpp
