INCLUDE_DIRECTORIES(${POKELIB_SOURCE_DIR}/include)

FILE(GLOB pokelib_sources RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "*.c*")
ADD_LIBRARY(pokelib SHARED ${pokelib_sources})
SET_TARGET_PROPERTIES(pokelib PROPERTIES DEFINE_SYMBOL "POKELIB_DLL_EXPORTS")
INSTALL(TARGETS pokelib
        LIBRARY DESTINATION ${LIBRARY_DIR} COMPONENT Libraries #.so
        ARCHIVE DESTINATION ${LIBRARY_DIR} COMPONENT Libraries #.lib
        RUNTIME DESTINATION ${RUNTIME_DIR} COMPONENT Runtime #.dll
)
